# paho.mqtt.embedded-c

./: CMakeLists.txt
MQTTClient/src/: CMakeLists.txt  MQTTClient.h  MQTTLogging.h  stub.cpp
MQTTClient/src/tos/: adapters.hpp
MQTTPacket/src/: CMakeLists.txt  MQTTPacket.c
